crates/test-files/fixtures/compile_errors/duplicate_contract_in_module.fe
contract Foo {
    pub fn bar() {}
}

contract Foo {
    pub fn bar() {}
}
